--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "faunadb": "^4.1.3",
     "framer-motion": "^4",
+    "lodash.clonedeep": "^4.5.0",
     "multer": "^1.4.2",
     "next": "10.0.9",
     "next-connect": "^0.10.1",
@@ -33,6 +34,7 @@
     "@testing-library/react-hooks": "^5.1.1",
     "@testing-library/user-event": "^13.1.1",
     "@types/jest": "^26.0.21",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
