--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@hookform/resolvers": "^2.3.0",
+    "@supabase/supabase-js": "^1.21.0",
     "axios": "^0.21.1",
-    "faunadb": "^4.1.3",
     "framer-motion": "^4",
     "lodash.clonedeep": "^4.5.0",
     "multer": "^1.4.2",
