--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.0.7",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.0",
     "react-query": "^3.13.4",
     "yup": "^0.32.9"
   },
