--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_IMGBB_API_KEY=
-FAUNA_API_KEY=
+REACT_APP_SUPABASE_URL=
+REACT_APP_SUPABASE_ANON_KEY=
+REACT_APP_SUPABASE_PASSWORD_POSTGRES=
